add password util

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,4 +9,6 @@
 
 <p>My efforts let me to keep a simple list (written and updated publicly using Markdown). While it mostly worked, I knew I desired something more dynamic and domain-specific.</p>
 
+<%= it.foo %>
+
 <%- include('_includes/footer.ejs') %>
