--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('_includes/header.ejs') %>
 
 <h1>backlog cleaner</h1>
-<span class="bold">A tiny tool to help cleanup your backlog</span>
+<span><b>A tiny tool to help cleanup your backlog</b></span>
 
 <hr>
 
@@ -9,6 +9,8 @@
 
 <p>My efforts let me to keep a simple list (written and updated publicly using Markdown). While it mostly worked, I knew I desired something more dynamic and domain-specific.</p>
 
-<%= it.foo %>
+<p><%= it.foo %></p>
+
+<%- include('components/login.ejs') %>
 
 <%- include('_includes/footer.ejs') %>
