--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,10 +1,23 @@
-fieldset { border: 0; }
+fieldset { border: 0; padding: 0; margin: 1rem auto; }
+
+input, input:focus, input:active {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+}
+
+input[type="text"], input[type="password"] {
+    background-color: rgba(0, 0, 0, 0);
+    display: block;
+    padding: 0.5rem;
+}
 
 button {
     padding: 0.5rem 0.8rem;
     background-color: rgba(0, 0, 0, 0);
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    /*font-weight: 700;*/
+    border-color: rgba(0, 0, 0, 0.5);
+    border-style: solid;
+    border-width: 1px;
     border-radius: 3px;
 }
 
