--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,6 +9,8 @@
 
 <p>My efforts let me to keep a simple list (written and updated publicly using Markdown). While it mostly worked, I knew I desired something more dynamic and domain-specific.</p>
 
+<a href="#">This is a hyperlink</a>
+
 <p><%= it.foo %></p>
 
 <%- include('components/login.ejs') %>
