--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,6 +13,7 @@
 
 <p><%= it.foo %></p>
 
+<%- include('components/signup.ejs') %>
 <%- include('components/login.ejs') %>
 
 <%- include('_includes/footer.ejs') %>
