--- a/src/views/_includes/header.ejs
+++ b/src/views/_includes/header.ejs
@@ -15,3 +15,8 @@
         <label class="dark-mode-btn" for="darkSwitch">🌒</label>
     </div>
     <main>
+        <nav>
+            <a href="/">home</a>
+            <a href="/login">login</a>
+            <a href="/signup">signup</a>
+        </nav>
