--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,5 +1,6 @@
-<%- include('_includes/header.ejs', { user: it.user }) %>
+<%- include('_includes/header.ejs', { user: it.sessionUser }) %>
 
-<h1><%= it.error %></h1>
+<h1><%= it.code %></h1>
+<h2><%= it.error %></h2>
 
 <%- include('_includes/footer.ejs') %>
