add esbuild; various template changes & schema changes

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -13,8 +13,8 @@
     <button type="submit" value="OK">submit</button>
 </form>
 
-<% if (it.error) { -%>
+<% if (it.error) { %>
     <p>error: <%= it.error %></p>
-<% } -%>
+<% } %>
 
 <%- include('_includes/footer.ejs') %>
