--- a/src/views/_includes/header.ejs
+++ b/src/views/_includes/header.ejs
@@ -19,11 +19,11 @@
         <nav>
             <a href="/">home</a>
 
-            <% if (it.sessionUser && it.sessionUser.username !== undefined) { -%>
-                <a href="<%= it.sessionUser.username.trim() -%>">dashboard</a>
+            <% if (it.sessionUser && it.sessionUser.username !== undefined) { %>
+                <a href="<%= it.sessionUser.username.trim() %>">dashboard</a>
                 <a href="/logout">logout</a>
-            <% } else { -%>
+            <% } else { %>
                 <a href="/login">login</a>
                 <a href="/signup">signup</a>
-            <% } -%>
+            <% } %>
         </nav>
