--- a/src/views/dashboard.ejs
+++ b/src/views/dashboard.ejs
@@ -4,4 +4,20 @@
 
 <h2><%= it.user.username %></h2>
 
+<h2>lists</h2>
+
+<% if (it.lists && it.lists.length > 0) { %>
+    <% for (let list of it.lists) { %>
+        <div>
+            <h3>
+                <a href="/<%= it.user.username %>/<%= list.slug %>">
+                    <%= list.listname %>
+                </a>
+            </h3>
+        </div>
+    <% } %>
+<% } else { %>
+    <em>this user has not made any lists yet</em>
+<% } %>
+
 <%- include('_includes/footer.ejs') %>
