--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -16,8 +16,8 @@
     <button type="submit">submit</button>
 </form>
 
-<% if (it.error) { -%>
+<% if (it.error) { %>
     <p>error: <%= it.error %></p>
-<% } -%>
+<% } %>
 
 <%- include('_includes/footer.ejs') %>
