--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -1,6 +1,8 @@
 <%- include('_includes/header.ejs', { user: it.sessionUser }) %>
 
-<h1><%= it.code %></h1>
-<h2><%= it.message %></h2>
+<main>
+    <h1><%= it.code %></h1>
+    <h2><%= it.message %></h2>
+</main>
 
 <%- include('_includes/footer.ejs') %>
