--- a/src/views/logout.ejs
+++ b/src/views/logout.ejs
@@ -1,7 +1,9 @@
 <%- include('_includes/header.ejs') %>
 
-<h1>backlog cleaner</h1>
+<main>
+    <h1>backlog cleaner</h1>
 
-<h2>you have been logged out</h2>
+    <h2>you have been logged out</h2>
+</main>
 
 <%- include('_includes/footer.ejs') %>
