--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,3 +1,4 @@
+h1, h2, h3, h4, h5, h6 { font-family: monospace; }
 fieldset { border: 0; padding: 0; margin: 1rem auto; }
 
 input, input:focus, input:active {
