--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -2,7 +2,7 @@
 
 <main>
     <p>
-        <a href="/<%= it.list.username %>"><%= it.list.username %>'s lists</a>
+        <a href="/<%= it.username %>"><%= it.username %>'s lists</a>
     </p>
     <h1><%= it.list.listname %></h1>
 
