update esbuild; update esbuild scripts

--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -27,6 +27,6 @@
         };
     })();
 </script>
-<script defer src="/app/list.min.js"></script>
+<script defer src="/app/list.js"></script>
 
 <%- include('_includes/footer.ejs') %>
