--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -53,7 +53,7 @@ i.cancel { background-image: url('/assets/cancel.png'); }
 i.move { background-image: url('/assets/move.png'); height: 18px; width: 18px; }
 
 /*Buttons*/
-button.item-control, button.section-control, button.list-control {
+button.item-control, button.section-control {
     padding: 0.3rem;
     margin-right: 0.4rem;
     font-size: 0.8em;
@@ -63,6 +63,15 @@ button.item-control, button.section-control, button.list-control {
 /*List*/
 .list-controls {
     display: inline-block;
+    z-index: 9;
+}
+
+.list-control, input.list-control { display: inline; }
+input.list-control { margin-right: 0.4rem; }
+button.list-control {
+    padding: 0.45rem;
+    margin-right: 0.4rem;
+    font-size: 0.8em;
     z-index: 9;
 }
 
