--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -132,3 +132,5 @@ header.section-header > h2 {
 .sortablejs__item--selected {
     box-shadow: inset 0px 0px 1px 1px #7676a6;
 }
+
+.cursor-grab { cursor: grab; }
