--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -28,6 +28,7 @@ button {
 
 button:hover { background-color: rgba(0, 0, 0, 0.1); }
 button:focus { background-color: rgba(0, 0, 0, 0.2); }
+button[disabled], button[disabled]:hover { opacity: 0.6; background-color: rgba(0, 0, 0, 0); }
 
 table { margin: 1rem 0; }
 tr:nth-of-type(1) { border-top: 1px solid rgba(100, 100, 100, 0.2); }
@@ -67,8 +68,9 @@ button.item-control, button.section-control {
     max-height: 32.38px;
 }
 
-.list-control, input.list-control { display: inline; }
-input.list-control { margin-right: 0.4rem; }
+.list-control, .section-control, input.list-control, input.section-control { display: inline; }
+input.list-control, input.section-control { margin-right: 0.4rem; }
+
 button.list-control {
     padding: 0.45rem;
     margin-right: 0.4rem;
