--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -135,4 +135,6 @@ header.section-header > h2 {
     box-shadow: inset 0px 0px 1px 1px #7676a6;
 }
 
+/*Utility*/
+.opacity-25 { opacity: 0.25; }
 .cursor-grab { cursor: grab; }
