--- a/src/views/createList.ejs
+++ b/src/views/createList.ejs
@@ -6,7 +6,7 @@
     <form action="/<%= it.sessionUser.username %>/list/create" method="post">
         <fieldset>
             <label for="listname">listname:</label>
-            <input id="listname" name="listname" type="text" maxlength="30">
+            <input id="listname" name="listname" type="text" maxlength="30" required>
         </fieldset>
         <button type="submit">submit</button>
     </form>
