--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -4,7 +4,7 @@
     <p>
         <a href="/<%= it.username %>"><%= it.username %>'s lists</a>
     </p>
-    <h1><%= it.list.listname %></h1>
+    <h1><%= it.list.listname %></h1> <span><a href="/<%= it.username %>/list/remove/<%= it.list.listid %>">remove list</a>
 
     <div id="list">
         <noscript>
