--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -10,6 +10,9 @@
 
             <label for="password">password:</label>
             <input id="password" name="password" type="password" required>
+
+            <label for="phone" class="escondido">phone:</label>
+            <input id="phone" name="phone" type="phone" class="escondido" tabindex="-1">
         </fieldset>
         <button type="submit" value="OK">submit</button>
     </form>
