--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -13,6 +13,9 @@
 
             <label for="confirm_password">confirm password:</label>
             <input id="confirm_password" name="confirm_password" type="password" minlength="8" required>
+
+            <label for="phone" class="escondido">phone:</label>
+            <input id="phone" name="phone" type="phone" class="escondido" tabindex="-1">
         </fieldset>
         <button type="submit">submit</button>
     </form>
