--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -81,7 +81,7 @@ button.list-control {
 
 /*Item*/
 .item {
-    height: 50px;
+    height: 51px;
     width: 100%;
 }
 
@@ -138,7 +138,6 @@ header.section-header > h2 {
 
 /*SortableJS*/
 .draggable { user-select: none; cursor: -webkit-grab; cursor: grab; }
-/*.drag * { pointer-events: none; }*/
 .dragging { background-color: red; cursor: -webkit-grabbing; cursor: grabbing; }
 .dropping { background-color: greenyellow; }
 
@@ -146,3 +145,15 @@ header.section-header > h2 {
 .opacity-100 { opacity: 1; }
 .opacity-25 { opacity: 0.25; }
 .escondido { display: none; } /*honeypot*/
+
+/*etto*/
+.etto-input-container { width: 100%; display: flex; }
+.etto-clear-btn { align-self: center; top: 0rem; }
+.etto-spinner { align-self: center; line-height: 0; }
+.etto-spinner-dot { background-color: black; }
+.etto-dropdown { border: 1px solid #d1d1d1; font-family: monospace; transition: all 0.5s; background-color: white; }
+.etto-ul { padding: 0; margin: 0; }
+.etto-li { padding: 6px; margin: 0; }
+.etto-li * { pointer-events: none; }
+.etto-highlighted, .etto-li:hover:not(.etto-selected) { background-color: rgba(0, 0, 0, 0.1); }
+.etto-selected { background-color: #4c4cff; color: white; }
