--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -1,39 +1,3 @@
-body { max-width: 48rem; }
-h1, h2, h3, h4, h5, h6 { font-family: monospace; }
-fieldset { border: 0; padding: 0; margin: 1rem auto; }
-
-input, input:focus, input:active {
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 3px;
-}
-
-input[type="text"], input[type="password"] {
-    background-color: rgba(0, 0, 0, 0);
-    display: block;
-    padding: 0.5rem;
-}
-
-button {
-    font-family: monospace;
-    display: inline-flex;
-    align-items: center;
-    padding: 0.5rem 0.8rem;
-    background-color: rgba(0, 0, 0, 0);
-    border-color: rgba(0, 0, 0, 0.5);
-    border-style: solid;
-    border-width: 1px;
-    border-radius: 3px;
-}
-
-button:hover { background-color: rgba(0, 0, 0, 0.1); }
-button:focus { background-color: rgba(0, 0, 0, 0.2); }
-button[disabled], button[disabled]:hover { opacity: 0.6; background-color: rgba(0, 0, 0, 0); }
-
-table { margin: 1rem 0; }
-tr:nth-of-type(1) { border-top: 1px solid rgba(100, 100, 100, 0.2); }
-tr { border-bottom: 1px solid rgba(100, 100, 100, 0.2); }
-
 /*Icons*/
 i {
     height: 16px;
@@ -56,24 +20,46 @@ i.bookmark { background-image: url('/assets/bookmark.png'); }
 i.internet { background-image: url('/assets/internet.png'); }
 i.move { background-image: url('/assets/move.png'); height: 18px; width: 18px; }
 
+body { max-width: 48rem; }
+h1, h2, h3, h4, h5, h6 { font-family: monospace; }
+fieldset { border: 0; padding: 0; margin: 1rem auto; }
+
+input, input:focus, input:active {
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+}
+
+input[type="text"], input[type="password"] {
+    background-color: rgba(0, 0, 0, 0);
+    display: block;
+    padding: 0.5rem;
+}
+
 /*Buttons*/
-button.item-control, button.section-control {
+button {
+    font-family: monospace;
+    display: inline-flex;
+    align-items: center;
+    padding: 0.5rem 0.8rem;
+    background-color: rgba(0, 0, 0, 0);
+    border-color: rgba(0, 0, 0, 0.5);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+}
+
+button:hover { background-color: rgba(0, 0, 0, 0.1); }
+button:focus { background-color: rgba(0, 0, 0, 0.2); }
+button[disabled], button[disabled]:hover { opacity: 0.6; background-color: rgba(0, 0, 0, 0); }
+
+button.item-control,
+button.section-control {
     padding: 0.3rem;
     margin-right: 0.4rem;
     font-size: 0.8em;
     z-index: 9;
 }
-
-/*List*/
-.list-controls {
-    display: inline-block;
-    z-index: 9;
-    height: 32.38px;
-    width: auto;
-}
-
-.list-control, .section-control, input.list-control, input.section-control { display: inline; }
-input.list-control, input.section-control { margin-right: 0.4rem; }
 
 button.list-control {
     padding: 0.45rem;
@@ -82,48 +68,63 @@ button.list-control {
     z-index: 9;
 }
 
+/*List*/
+.list-controls {
+    height: 3em;
+    display: flex;
+    align-items: center;
+}
+
+.list-controls > input {
+    margin-right: 1rem;
+}
+
+
 /*Item*/
+.item-list {
+    padding-left: 1rem;
+    display: grid;
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+}
+
 .item {
-    height: 51px;
-    width: 100%;
-}
-
-.item-table { margin: 0 0; }
-
-.item-name, .item-data {
-    width: 35%;
-    text-align: left;
-}
-
-.item-name input, .item-data input {
-    min-width: 0px;
-    width: 100%;
-}
-
-.item-url { display: flex; align-items: center; width: max-content; }
-
-.item-controls {
-    width: 30%;
-    text-align: right;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    height: 3em;
 }
 
 .item-controls:not(.is-being-used) {
     opacity: 0;
 }
 
-.item:hover .item-controls, .item-controls:hover { opacity: 1; }
-
-/*Section*/
-header.section-header > h2 {
-    display: inline-block;
+.item:hover .item-controls,
+.item-controls:hover {
+    opacity: 1;
 }
 
-.section-header:hover .section-controls, .section-controls:hover { opacity: 1; }
+/*Section*/
+.section {
+    margin: 2.4rem 0;
+}
+
+.section-header {
+    height: 3em;
+    display: flex;
+    align-items: center;
+}
+
+.section-header h2 {
+    margin: 0 0;
+}
 
 .section-controls {
-    display: inline-block;
-    z-index: 9;
-    margin-left: 1rem;
+    padding: 0 1rem;
+}
+
+.section-header:hover .section-controls,
+.section-controls:hover {
+    opacity: 1;
 }
 
 .section-controls:not(.is-being-used) {
